tests/snapshots/run_wpt_conformance__onnx_convTranspose2d_float16_4D_both_input_and_filter_non-constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv_transpose2d.https.any.js",
    "convTranspose2d float16 4D both input and filter non-constant tensors default options",
    "onnx",
    "PASS",
)
